@@ -88,8 +88,8 @@ struct CUPT_API ArchitecturedRelation: public Relation
 	CUPT_LOCAL const char* p_parseProfiles(const char*, const char*);
 	CUPT_LOCAL void __init(const char*, const char*, const char*);
  public:
-	/// architecture filters
-	vector< string > architectureFilters;
+	vector<string> architectureFilters;
+	vector<vector<string>> buildProfiles;
 
 	/// constructor
 	/**
